--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h1>Best Movies According To Ruddhida</h1>
+<h2>Top 3 Movies Of All Time</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3>Boss Baby</h3>
+<p>One adventours baby bossing around.A great time passing one.</p>
+<h3>Stranger Things</h3>
+<p>A roller coaster experience.A wonderful one.</p>
+<h3>Money Heist</h3>
+<p>Paying attention to all the commands as explained.Indeed a masterpiece.</p>
